Create the admin login  controller function

--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 
 
+JWT_SECRET = "SECRET@abc"
+
+# Admin credentials
+
+ADMIN_Username = "admin@gmail.com"
+ADMIN_Password = "Admin123"
+
+
+
 MONGODB_URI = "mongodb+srv://yasindu:0000@cluster0.trxncba.mongodb.net"
